--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "test": "jest --watchAll",
-    "lint": "expo lint"
+    "test": "jest --passWithNoTests",
+    "test:watch": "jest --watchAll",
+    "lint": "expo lint",
+    "lint:fix": "eslint . --fix"
   },
   "jest": {
     "preset": "jest-expo"
@@ -25,6 +27,9 @@
     "@types/jest": "^29.5.12",
     "@types/react": "~18.2.45",
     "@types/react-test-renderer": "^18.0.7",
+    "eslint": "^8.57.0",
+    "eslint-config-expo": "^7.1.2",
+    "eslint-config-standard": "^17.1.0",
     "jest": "^29.2.1",
     "jest-expo": "~51.0.1",
     "react-test-renderer": "18.2.0",
