--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
   "dependencies": {
     "expo": "~51.0.2",
     "expo-router": "~3.5.11",
+    "i18next": "^23.11.4",
     "react": "18.2.0",
+    "react-i18next": "^14.1.1",
     "react-native": "0.74.1",
     "react-native-web": "~0.19.10"
   },
