--- a/package.json
+++ b/package.json
@@ -16,8 +16,12 @@
     "preset": "jest-expo"
   },
   "dependencies": {
+    "@expo/vector-icons": "^14.0.1",
+    "@react-native-async-storage/async-storage": "1.23.1",
     "expo": "~51.0.2",
+    "expo-font": "^12.0.4",
     "expo-router": "~3.5.11",
+    "expo-splash-screen": "^0.27.4",
     "i18next": "^23.11.4",
     "react": "18.2.0",
     "react-i18next": "^14.1.1",
