--- a/package.json
+++ b/package.json
@@ -16,16 +16,17 @@
     "preset": "jest-expo"
   },
   "dependencies": {
-    "@expo/vector-icons": "^14.0.1",
+    "@expo/vector-icons": "~14.0.1",
     "@react-native-async-storage/async-storage": "1.23.1",
-    "expo": "~51.0.2",
-    "expo-font": "^12.0.4",
-    "expo-router": "~3.5.11",
-    "expo-splash-screen": "^0.27.4",
+    "expo": "~51.0.9",
+    "expo-font": "~12.0.6",
+    "expo-router": "~3.5.14",
+    "expo-splash-screen": "~0.27.4",
     "i18next": "^23.11.4",
     "react": "18.2.0",
-    "react-i18next": "^14.1.1",
+    "react-i18next": "~14.1.1",
     "react-native": "0.74.1",
+    "react-native-safe-area-context": "4.10.1",
     "react-native-web": "~0.19.10"
   },
   "devDependencies": {
@@ -37,7 +38,7 @@
     "eslint-config-expo": "^7.1.2",
     "eslint-config-standard": "^17.1.0",
     "jest": "^29.2.1",
-    "jest-expo": "~51.0.1",
+    "jest-expo": "~51.0.2",
     "react-test-renderer": "18.2.0",
     "typescript": "~5.3.3"
   },
