--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "@expo/vector-icons": "~14.0.1",
     "@react-native-async-storage/async-storage": "1.23.1",
+    "dayjs": "^1.11.11",
     "expo": "~51.0.9",
     "expo-font": "~12.0.6",
     "expo-router": "~3.5.14",
