--- a/package.json
+++ b/package.json
@@ -19,14 +19,15 @@
     "@expo/vector-icons": "~14.0.1",
     "@react-native-async-storage/async-storage": "1.23.1",
     "dayjs": "^1.11.11",
-    "expo": "~51.0.9",
-    "expo-font": "~12.0.6",
-    "expo-router": "~3.5.14",
-    "expo-splash-screen": "~0.27.4",
+    "env-var": "^7.5.0",
+    "expo": "~51.0.14",
+    "expo-font": "~12.0.7",
+    "expo-router": "~3.5.16",
+    "expo-splash-screen": "~0.27.5",
     "i18next": "^23.11.4",
     "react": "18.2.0",
     "react-i18next": "~14.1.1",
-    "react-native": "0.74.1",
+    "react-native": "0.74.2",
     "react-native-safe-area-context": "4.10.1",
     "react-native-web": "~0.19.10"
   },
